// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Articles/> Component Check if renders correctly It should render with data 1`] = `
<div>
  <div
    class="statistics-views"
  >
    <div
      class="statistics-views__total-views"
    >
      <div
        class="statistics-views__total-views-item active"
      >
        <span
          class="statistics-views__total-views-label"
        >
          Total Views
        </span>
        <span
          class="statistics-views__total-views-number"
        >
          3 319 519
        </span>
      </div>
      <div
        class="statistics-views__total-views-item "
      >
        <span
          class="statistics-views__total-views-label"
        >
          Month Views
        </span>
        <span
          class="statistics-views__total-views-number"
        >
          22 112
        </span>
      </div>
      <div
        class="statistics-views__total-views-item disabled"
      >
        <span
          class="statistics-views__total-views-label"
        >
          Day Views
        </span>
        <span
          class="statistics-views__total-views-number"
        >
          5 564
        </span>
      </div>
    </div>
    <div
      class="statistics-views__charts-container"
    >
      <canvas
        class="statistics-views__chart"
        height="400"
        id="viewsChart"
        width="2400"
      />
    </div>
  </div>
</div>
`;

exports[`<Articles/> Component Check if renders correctly It should render without data 1`] = `
<div>
  <div
    class="statistics-views"
  >
    <div
      class="statistics-views__total-views"
    >
      <div
        class="statistics-views__total-views-item active"
      >
        <span
          class="statistics-views__total-views-label"
        >
          Total Views
        </span>
        <span
          class="statistics-views__total-views-number"
        >
          - -
        </span>
      </div>
      <div
        class="statistics-views__total-views-item "
      >
        <span
          class="statistics-views__total-views-label"
        >
          Month Views
        </span>
        <span
          class="statistics-views__total-views-number"
        >
          - -
        </span>
      </div>
      <div
        class="statistics-views__total-views-item disabled"
      >
        <span
          class="statistics-views__total-views-label"
        >
          Day Views
        </span>
        <span
          class="statistics-views__total-views-number"
        >
          - -
        </span>
      </div>
    </div>
    <div
      class="statistics-views__charts-container"
    >
      <canvas
        class="statistics-views__chart"
        height="400"
        id="viewsChart"
        width="2400"
      />
    </div>
  </div>
</div>
`;
